# agbom

./: .gitignore  LICENSE_ENGINE  LICENSE_SCHEMA  NOTICE  README.md  main.py  pyproject.toml
.github/agentbom/: rules.yml
agentbom/: __init__.py  cli.py  cli_validate.py  models.py  scanner.py
agentbom/detectors/: __init__.py  autogen.py  base.py  crewai.py  langchain_py.py  langchain_ts.py  schema_extractors.py
agentbom/extractors/: __init__.py  git.py
agentbom/policy/: __init__.py  engine.py  loader.py  report.py  ruleset.py
agentbom/utils/: __init__.py  docstring_parser.py  file_walker.py  github.py
examples/: .gitignore  README.md  USAGE.md  custom_schema_extractor_example.py  generate_bom.py  scan_org_with_search.py  test_all_examples.py
examples/autogen/: __init__.py  coding_team.py  edge_cases_autogen.py  research_team.py  simple_group_chat.py
examples/crewai/: __init__.py  basic_crew.py  development_crew.py  edge_cases_crew.py  marketing_crew.py
examples/langchain_python/: __init__.py  basic_agent.py  complex_agent.py  edge_cases_agent.py  retrieval_agent.py  sales_support_agent.py  sql_agent.py
examples/langchain_typescript/: basic_agent.ts  complex_agent.ts  package.json  retrieval_agent.ts  sql_agent.ts  tsconfig.json
tests/: __init__.py  test_acceptance.py  test_examples_e2e.py  test_github_search.py  test_parameter_extraction.py
tests/policy/: __init__.py  test_validate.py
