[project]
name = "agentbom"
version = "0.1.0"
description = "Discover, inventory, and understand AI agents across your codebase"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "GitPython>=3.1",
    "jsonschema>=4.0",
    "requests>=2.28",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "rich>=13.0", # For better CLI output
    "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
llm = ["openai>=1.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
agentbom = "agentbom.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
